syntax = "proto3";

option go_package = "./proto";

package user;

service UserService {
  rpc TeamLogin(TeamLoginRequest) returns (LoginResponse) {}
  rpc StudentLogin(StudentLoginRequest) returns (LoginResponse) {}
  rpc GetInfo(GetInfoRequest) returns (UserInfoResponse) {}
  rpc GetProfile(GetRequest) returns (UserProfile) {}
  rpc List(ListRequest) returns (ListResponse) {}

  rpc ListMessage(ListMessageRequest)returns (ListMessageResponse) {}
  rpc ListPrivateMessage(ListMessageRequest)returns (ListMessageResponse) {}
  rpc CreateMessage(CreateMessageRequest)returns (Response) {}
  rpc CreatePrivateMessage(CreatePrivateMessageRequest)returns (Response) {}
  rpc DeletePrivateMessage(DeletePrivateMessageRequest)returns (Response) {}

  rpc UpdateInfo(UpdateInfoRequest) returns (Response) {}
}

message CreateMessageRequest {
  uint32 user_id = 1;
  string message = 2;
}

message CreatePrivateMessageRequest {
  uint32 send_id = 1;
  uint32 receive_id = 2;
  uint32 post_id =3;
  uint32 comment_id =4;
  string type = 5;
  string content = 6;
}

message DeletePrivateMessageRequest {
  uint32 user_id = 1;
}

message ListMessageRequest {
  uint32 user_id = 1;
}

message ListMessageResponse {
  repeated string messages = 1;
}

message StudentLoginRequest {
  string student_id = 1;
  string password = 2;
}

message UpdateInfoRequest {
  uint32 id = 1;
  UserInfo info = 2;
}

message GetRequest {
  uint32 id = 1;
}

message GetInfoRequest {
  repeated uint32 ids = 1;
}

message RegisterRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

message TeamLoginRequest {
  string oauth_code = 1;
}

message LoginResponse {
  string token = 1;
  string redirect_url = 2;
}

message UserInfo {
  uint32 id = 1;
  string name = 2;
  string email = 3;
  string avatar_url = 4;
  string signature = 5;
  bool is_public_collection_and_like = 6;
  bool is_public_feed = 7;
}

message UserInfoResponse {
  repeated UserInfo list = 1;
}

message UserProfile {
  uint32 id = 1;
  string name = 2;
  string role = 3;
  string avatar = 4;
  string email = 5;
  string signature = 6;
  bool is_public_feed = 7;
  bool is_public_collection_and_like = 8;
}

message ListRequest {
  uint32 last_id = 1;
  uint32 offset = 2;
  uint32 limit = 3;
  string role = 4;
}

message ListResponse {
  uint32 count = 1;
  repeated User list = 2;
}

message Request {}

message Response {}

message User {
  uint32 id = 1;
  string name = 2;
  string student_id = 3;
  string email = 4;
  string avatar = 5;
  string role = 6;
}
